# fetch-task

./: .gitignore  README.md  pyproject.toml
fetch_task/: main.py  utils.py
tests/: test_validation.py
