[tool.poetry]
name = "fetch-task"
version = "0.1.0"
description = ""
authors = ["floral-tea"]
readme = "README.md"
packages = [{include = "fetch_task"}]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.5.0"
validators = "^0.20.0"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.scripts]
fetchtask = "fetch_task.main:cli"
